[package]
name = "uring-playground"
description = "Experimental high-level io_uring abstractions"
version = "0.1.0"
license = "MIT"
authors = ["Leevi Koponen"]
edition = "2021"

# loud lints are better than leaving weird code around without justification
[lints.clippy]
all = "deny"
nursery = "deny"
pedantic = "deny"

# `io_uring` is already fundamentally single threaded
[lints.clippy.future_not_send]
level = "allow"
priority = 1

# current limitations primarily relate to `Send` bounds
[lints.rust.async_fn_in_trait]
level = "allow"
priority = 1
