[package]
name = "uring-playground"
description = "Experimental high-level io_uring abstractions"
version = "0.1.0"
license = "MIT"
authors = ["Leevi Koponen"]
edition = "2021"

# loud lints are better than leaving weird code around without justification
[lints.clippy]
all = "deny"
nursery = "deny"
pedantic = "deny"

# we definitely want to document assumptions
[lints.clippy.undocumented_unsafe_blocks]
level = "deny"

# `io_uring` is already fundamentally single threaded
[lints.clippy.future_not_send]
level = "allow"
priority = 1

# current limitations primarily relate to `Send` bounds
[lints.rust.async_fn_in_trait]
level = "allow"
priority = 1

[dependencies]
fnv = "1"                # fast hasher for small values
futures-lite = "2"       # minimal future combinators
indexmap = "2"           # ordered hash table
io-uring = "0.7"         # low level `io_uring` bindings
libc = "0.2"             # `libc` bindings
pin-project-lite = "0.2" # macro to deal with pinned values
thunderdome = "0.6"      # typed generational arena
