[package]
name = "uring-playground"
description = "Experimental high-level io_uring abstractions"
version = "0.1.0"
license = "MIT"
authors = ["Leevi Koponen"]
edition = "2021"

# loud lints are better than leaving weird code around without justification
[lints.clippy]
all = "deny"
nursery = "deny"
pedantic = "deny"
allow_attributes = "deny"
arbitrary_source_item_ordering = "deny"
as_conversions = "deny"
as_underscore = "deny"
clone_on_ref_ptr = "deny"
assertions_on_result_states = "deny"
if_then_some_else_none = "deny"
impl_trait_in_params = "deny"
let_underscore_must_use = "deny"
missing_asserts_for_indexing = "deny"
module_name_repetitions = "deny"
multiple_unsafe_ops_per_block = "deny"
partial_pub_fields = "deny"
ref_patterns = "deny"
renamed_function_params = "deny"
rest_pat_in_fully_bound_structs = "deny"
same_name_method = "deny"
self_named_module_files = "deny"
single_char_lifetime_names = "deny"
tests_outside_test_module = "deny"
try_err = "deny"
undocumented_unsafe_blocks = "deny"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
unused_result_ok = "deny"
unused_trait_names = "deny"
wildcard_enum_match_arm = "deny"

# `io_uring` is already fundamentally single threaded
[lints.clippy.future_not_send]
level = "allow"
priority = 1

# current limitations primarily relate to `Send` bounds
[lints.rust.async_fn_in_trait]
level = "allow"
priority = 1

[dependencies]
fnv = "1"                # fast hasher for small values
futures-lite = "2"       # minimal future combinators
indexmap = "2"           # ordered hash table
io-uring = "0.7"         # low level `io_uring` bindings
libc = "0.2"             # `libc` bindings
pin-project-lite = "0.2" # macro to deal with pinned values
thunderdome = "0.6"      # typed generational arena
